--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ description: Template for homepage.
 remark: See also page.layout == 'home' in head.html and header.html.
 ---
 
-{% if site.tweets_on_home and site.social.twitter %}
+{% if page.featured %}
   {% assign two_col = true %}
 {% endif %}
 
@@ -12,28 +12,34 @@ remark: See also page.layout == 'home' in head.html and header.html.
   <div class="{% if two_col %}col{% else %}col-md-10 col-lg-8 mx-auto{% endif %}">
     <div class="row">
       <div class="col">
-        {% if page.featured %}
-          <div class="position-relative d-flex rounded bg-light mb-4">
-            {% if page.featured.img %}
-              <img class="img-fluid w-25 rounded-start" src="{{ page.featured.img }}" style="object-fit: cover;">
-            {% endif %}
-            <div class="p-3">
-              {{ page.featured.description | markdownify }}
-              <a class="btn btn-primary btn-sm stretched-link" href="{{ page.featured.href }}">Read more</a>
-            </div>
-          </div>
-        {% endif %}
 
         {{ content }}
 
+        <div class="d-flex align-items-center justify-content-between mb-4">
+          <img class="img-fluid w-50 me-3" src="{{ '/assets/images/tdwg-logo-home.svg' | relative_url }}">
+          <div>
+            <a class="btn btn-primary text-start mb-1" href="http://eepurl.com/8VIvn"><i class="fa fa-envelope me-1"></i> Subscribe to our announcements</a>
+            <a class="btn btn-primary text-start" href="{{ '/about/membership/' | relative_url }}"><i class="fa fa-user me-1"></i> Become a member</a>
+          </div>
+        </div>
       </div>
 
       {% if two_col %}
         <div class="col-lg-4">
-          <a class="twitter-timeline" data-height="500" data-link-color="{{ site.colors.links }}" href="https://twitter.com/{{ site.social.twitter }}?ref_src=twsrc%5Etfw">
-            Tweets by {{ site.social.twitter }}
-          </a>
-          <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          <div class="card position-relative">
+            <div class="card-header bg-secondary text-light">
+              Featured
+            </div>
+            {% if page.featured.img %}
+              <img class="card-img-top" style="border-radius: 0px;" src="{{ page.featured.img }}" alt="Background image">  
+            {% endif %}
+            <div class="card-body">
+              <div class="card-text">
+                {{ page.featured.description | markdownify }}
+                <a class="btn btn-primary stretched-link" href="{{ page.featured.href }}">Read more</a>
+              </div>
+            </div>
+          </div>
         </div>
       {% endif %}
     </div>
