--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-description: Template for pages that include a list to navigate to other pages.
+description: Template for pages with a list to navigate to other pages.
 ---
 
 {{ content }}
@@ -28,9 +28,17 @@ description: Template for pages that include a list to navigate to other pages.
               {% endif %}
               <li>
                 {% if subitem.label %}
+                  {% if subitem.button_bg %}
+                  <span class="badge {{ subitem.button_bg }} rounded-pill me-1" alt="Task Group">{{ subitem.label }}</span>   
+                {% else %}
                   <span class="badge bg-primary rounded-pill me-1" alt="Task Group">{{ subitem.label }}</span>
                 {% endif %}
-                <a href="{{ subitem.href | relative_url }}">{{ subitem_text }}</a>
+                {% endif %}
+                 {% if subitem.link_label %}
+                 <a href="{{ subitem.href | relative_url }}">{{ subitem.link_label }}</a>
+                {% else %}
+                  <a href="{{ subitem.href | relative_url }}">{{ subitem_text }}</a>
+                {% endif %}
               </li>
             {% endfor %}
           </ul>
