--- a/_layouts/list.html
+++ b/_layouts/list.html
@@ -19,7 +19,7 @@ description: Template for pages with a list to navigate to other pages.
            {% if item.button_bg %}
             <span class="badge {{ item.button_bg }} rounded-pill me-1">{{ item.label }}</span>   
           {% else %}
-            <span class="badge bg-primary rounded-pill me-1">{{ item.label }}</span>
+            <span class="badge bg-secondary rounded-pill me-1">{{ item.label }}</span>
           {% endif %}
         {% endif %}
         {% if subitem.link_label %}
